--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<title>Javascript</title>
 		<script>
 			function myFunction() {
-				document.getElementById("demo").innerHTML = Date();
+				document.getElementById("myImage").src="html-logo.png";
 			}
 		</script>
 	</head>
 	<body>
-		<button onclick="myFunction()">Clique aqui"</button>
-		<p id="demo"></p>
+		<button onclick="myFunction()">Clique aqui</button>
+		<img id="myImage" src="js-logo.png" style="width:200px">
 	</body>
 </html>
