--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html>
 	<head>
 		<title>Javascript</title>
+		<style>
+			#myImage {
+				position: absolute;
+				top: 100px;
+				left: 50%;
+			}
+		</style>
 		<script>
-			function myFunction() {
+			function trocaImagem() {
 				document.getElementById("myImage").src="html-logo.png";
+			}
+			function imagemTroca() {
+				document.getElementById("myImage").src="js-logo.png";
 			}
 		</script>
 	</head>
 	<body>
-		<button onclick="myFunction()">Clique aqui</button>
+		<button id="botao_imagem" onclick="trocaImagem()">Imagem 1</button>
+		<button id="botao_imagem" onclick="imagemTroca()">Imagem 2</button>
 		<img id="myImage" src="js-logo.png" style="width:200px">
 	</body>
 </html>
