--- a/index.html
+++ b/index.html
@@ -2,25 +2,12 @@
 <html>
 	<head>
 		<title>Javascript</title>
-		<style>
-			#myImage {
-				position: absolute;
-				top: 100px;
-				left: 50%;
-			}
-		</style>
-		<script>
-			function trocaImagem() {
-				document.getElementById("myImage").src="html-logo.png";
-			}
-			function imagemTroca() {
-				document.getElementById("myImage").src="js-logo.png";
-			}
-		</script>
+		<script src="js/funcoes.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<button id="botao_imagem" onclick="trocaImagem()">Imagem 1</button>
 		<button id="botao_imagem" onclick="imagemTroca()">Imagem 2</button>
-		<img id="myImage" src="js-logo.png" style="width:200px">
+		<img id="myImage" src="img/js-logo.png" style="width:200px">
 	</body>
 </html>
