JavaScript alterando fonte

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 		<button id="botao_imagem" onclick="trocaImagem()">Imagem 1</button>
 		<button id="botao_imagem" onclick="imagemTroca()">Imagem 2</button>
 		<img id="myImage" src="img/js-logo.png" style="width:200px">
+		<p id="demo">Mudando o estilo de um elemento html</p>
+		<button id="botao_imagem" onclick="trocaFonte()">Alterar Fonte</button>
 	</body>
 </html>
