--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<p id="demo">Mudando o estilo de um elemento html</p>
 		<button id="botao_imagem" onclick="trocaFonte()">Aumentar Fonte</button>
 		<button id="botao_imagem" onclick="fonteTroca()">Diminuir Fonte</button>
+		<button id="botao_imagem" onclick="ocultarElemento()">Ocultar Elemento</button>
+		<p id="teste">
 		
 	</body>
 </html>
