Nao ocultar elemento

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<button id="botao_imagem" onclick="trocaFonte()">Aumentar Fonte</button>
 		<button id="botao_imagem" onclick="fonteTroca()">Diminuir Fonte</button>
 		<button id="botao_imagem" onclick="ocultarElemento()">Ocultar Elemento</button>
-		<p id="teste">
+		<button id="botao_imagem" onclick="naoOcultarElemento()">Não ocultar Elemento</button>
 		
 	</body>
 </html>
