Ocultar e mostrar no mesmo botao

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 		<button id="botao_imagem" onclick="ocultarElemento()">Ocultar Elemento</button>
 		<button id="botao_imagem" onclick="naoOcultarElemento()">Não ocultar Elemento</button>
 		
+		<button id="botao_imagem" onclick="ocultarMostrar()">Ocultar/Mostrar</button>
+		
+		
 	</body>
 </html>
