--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
 		<button id="botao_imagem" onclick="imagemTroca()">Imagem 2</button>
 		<img id="myImage" src="img/js-logo.png" style="width:200px">
 		
-		<p id="demo">Mudando o estilo de um elemento html</p>
+		<p id="demo">
+			Lorem ipsum lectus lacus purus aliquam tortor semper viverra pulvinar enim, </br>
+			taciti nullam adipiscing quam ad orci ullamcorper dolor suspendisse lobortis,</br>
+			ornare neque quam in tempor pharetra posuere tempor tellus. </br>
+			fringilla cras nunc porta morbi ante libero, torquent libero urna consectetur </br>
+			litora magna lectus, bibendum enim vel neque erat. </br>
+			euismod vitae quam a at auctor venenatis dui, himenaeos torquent praesent id </br>
+			pharetra placerat nisl, tristique ad id aenean metus maecenas. </br>
+			fusce libero vehicula duis habitasse ad turpis dictumst laoreet venenatis, </br>
+			posuere himenaeos ornare arcu ac purus dui etiam, posuere nisl litora cursus </br>
+			bibendum accumsan leo curabitur. </br>
+		
+		</p>
 		<button id="botao_imagem" onclick="trocaFonte()">Aumentar Fonte</button>
 		<button id="botao_imagem" onclick="fonteTroca()">Diminuir Fonte</button>
 		<button id="botao_imagem" onclick="ocultarElemento()">Ocultar Elemento</button>
 		<button id="botao_imagem" onclick="naoOcultarElemento()">Não ocultar Elemento</button>
 		
 		<button id="botao_imagem" onclick="ocultarMostrar()">Ocultar/Mostrar</button>
+		<button id="botao_imagem" onclick="calcular()">Calcular</button>
 		
 		
 	</body>
