--- a/formulario.html
+++ b/formulario.html
@@ -15,6 +15,13 @@
 		<option value="1982">1982</option>
 		<option value="1983">1983</option>
 	  </select><br>
+	  Qual a data do seu aniversário?<br>
+	  <input type="date" name="data_aniversario"><br>
+	  Assinale os itens de maior consumo:<br>
+	  <input type="checkbox" name="chocolate" value="chocolate">Chocolate<br>
+	  <input type="checkbox" name="refrigerante" value="refrigerante">Refrigerante<br>
+	  Digite o seu e-mail:<br>
+	  <input type="email" name="email"><br>
 	  Digite uma mensagem:<br>
 	  <textarea name="mensagem" rows="10" cols="30"></textarea><br><br>
 	  <input type="submit" value="Enviar">
